[package]
name = "macro_test"
version = "0.1.0"
authors = ["June <hqerth@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hello_macro_derive = { path = "hello_macro_derive" }
sync_struct = { path = "sync_struct" }
