[package]
name = "minigrep"
version = "0.1.0"
authors = ["June <hqerth@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scale = { package = "parity-scale-codec", version = "1.3", default-features = false, features = ["derive", "full"] }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0"