[package]
name = "tokiotest"
version = "0.1.0"
authors = ["June <hqerth@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
futures = {version = "0.3.4", features = ["thread-pool"]}