[package]
name = "sync_struct"
version = "0.1.0"
authors = ["June <hqerth@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
synstructure = "0.12.4"
syn = { version = "1.0.60", features = ["full", "extra-traits"] }
quote = "1.0.8"
proc-macro2 = "1.0.24"

[lib]
proc-macro = true